--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,14 +34,21 @@ dependencies {
 
     compile 'com.android.support:design:25.4.0'
 
-    // Dagger2
-    compile 'com.google.dagger:dagger:2.11'
-    kapt 'com.google.dagger:dagger-compiler:2.11'
-
-    // Lifecycles, LiveData, and ViewModel
+    // Lifecycle, LiveData, and ViewModel
     compile "android.arch.lifecycle:runtime:1.0.0-alpha3"
     compile "android.arch.lifecycle:extensions:1.0.0-alpha3"
     kapt "android.arch.lifecycle:compiler:1.0.0-alpha3"
+
+    // Dependency injection library: Dagger2
+    compile 'com.google.dagger:dagger:2.11'
+    kapt 'com.google.dagger:dagger-compiler:2.11'
+
+    // JSON deserialization library: gson
+    compile 'com.google.code.gson:gson:2.8.1'
+    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
+
+    // REST client: retrofit
+    compile 'com.squareup.retrofit2:retrofit:2.3.0'
 }
 repositories {
     mavenCentral()
