--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,12 +43,18 @@ dependencies {
     compile 'com.google.dagger:dagger:2.11'
     kapt 'com.google.dagger:dagger-compiler:2.11'
 
-    // JSON deserialization library: gson
-    compile 'com.google.code.gson:gson:2.8.1'
-    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
+    // JSON deserialization library: Moshi
+    compile 'com.squareup.moshi:moshi:1.5.0'
+    compile 'com.squareup.retrofit2:converter-moshi:2.3.0'
 
     // REST client: retrofit
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
+
+    // ReativeX stuff
+    compile 'io.reactivex.rxjava2:rxjava:2.1.0'
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    compile 'io.reactivex.rxjava2:rxkotlin:2.0.0'
+    compile 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
 }
 repositories {
     mavenCentral()
