--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,59 +25,57 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
+    androidTestCompile("com.android.support.test.espresso:espresso-core:2.2.2", {
+        exclude group: "com.android.support", module: "support-annotations"
     })
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    compile 'com.android.support:appcompat-v7:26.0.2'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.android.support:cardview-v7:26.0.2'
-    compile 'com.android.support:design:26.0.2'
-    compile 'com.android.support:support-vector-drawable:26.0.2'
-    testCompile 'junit:junit:4.12'
+    compile "com.android.support:appcompat-v7:$support_version"
+    compile "com.android.support.constraint:constraint-layout:1.0.2"
+    compile "com.android.support:cardview-v7:$support_version"
+    compile "com.android.support:design:$support_version"
+    compile "com.android.support:support-vector-drawable:$support_version"
+    testCompile "junit:junit:4.12"
 
     // Lifecycle, LiveData, and ViewModel
-    compile 'android.arch.lifecycle:runtime:1.0.0-alpha3'
-    compile 'android.arch.lifecycle:extensions:1.0.0-alpha3'
-    kapt 'android.arch.lifecycle:compiler:1.0.0-alpha3'
+    compile "android.arch.lifecycle:runtime:$architecture_components_version"
+    compile "android.arch.lifecycle:extensions:$architecture_components_version"
+    kapt "android.arch.lifecycle:compiler:$architecture_components_version"
 
     // Dependency injection library: Dagger2
-    compile 'com.google.dagger:dagger:2.11'
-    kapt 'com.google.dagger:dagger-compiler:2.11'
+    compile "com.google.dagger:dagger:$dagger_version"
+    kapt "com.google.dagger:dagger-compiler:$dagger_version"
 
     // JSON deserialization library: Moshi
-    compile 'com.squareup.moshi:moshi:1.5.0'
-    compile 'com.squareup.retrofit2:converter-moshi:2.3.0'
+    compile "com.squareup.moshi:moshi:1.5.0"
+    compile "com.squareup.retrofit2:converter-moshi:2.3.0"
  
     // REST client: retrofit
-    compile 'com.squareup.retrofit2:retrofit:2.3.0'
-    compile 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
-    compile 'com.squareup.okhttp3:logging-interceptor:3.8.0'
+    compile "com.squareup.retrofit2:retrofit:$retrofit_version"
+    compile "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
+    compile "com.squareup.okhttp3:logging-interceptor:3.8.0"
 
     // ReativeX stuff
-    compile 'io.reactivex.rxjava2:rxjava:2.1.0'
-    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    compile 'io.reactivex.rxjava2:rxkotlin:2.0.0'
+    compile "io.reactivex.rxjava2:rxjava:$rxjava_version"
+    compile "io.reactivex.rxjava2:rxandroid:2.0.1"
+    compile "io.reactivex.rxjava2:rxkotlin:2.0.0"
 
     // Image loading: Picasso
-    compile 'com.github.bumptech.glide:glide:4.0.0'
-    kapt 'com.github.bumptech.glide:compiler:4.0.0'
-    compile ("com.github.bumptech.glide:recyclerview-integration:4.0.0") {
+    compile "com.github.bumptech.glide:glide:$glide_version"
+    kapt "com.github.bumptech.glide:compiler:$glide_version"
+    compile ("com.github.bumptech.glide:recyclerview-integration:$glide_version") {
         // Excludes the support library because it's already included by Glide.
         transitive = false
     }
 
     // Video playing: Exoplayer
-    compile 'com.google.android.exoplayer:exoplayer-core:r2.5.2'
-    compile 'com.google.android.exoplayer:exoplayer-ui:r2.5.2'
+    compile "com.google.android.exoplayer:exoplayer-core:r$exoplayer_version"
+    compile "com.google.android.exoplayer:exoplayer-ui:r$exoplayer_version"
 
     // Best library ever: Kotlin Coroutines
-    compile "org.jetbrains.kotlinx:kotlinx-coroutines-android:0.18"
+    compile "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
 }
 repositories {
-    maven {
-        url "https://maven.google.com"
-    }
+
 }
 
 
