--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,20 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
-    ext.kotlin_version = '1.1.4-2'
+    ext.kotlin_version = '1.1.51'
     ext.anko_version = '0.9.1'
+    ext.support_version = '26.1.0'
+    ext.dagger_version = '2.11'
+    ext.retrofit_version = '2.3.0'
+    ext.rxjava_version = '2.1.5'
+    ext.glide_version = '4.2.0'
+    ext.exoplayer_version = '2.5.3'
+    ext.coroutines_version = '0.19.1'
+    ext.architecture_components_version = '1.0.0-beta2'
     repositories {
         jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
     }
 }
 
