--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,8 +4,8 @@ apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion "26.0.0"
+    compileSdkVersion 27
+    buildToolsVersion '26.0.2'
     defaultConfig {
         applicationId "com.bonnetrouge.toonup"
         minSdkVersion 19
@@ -24,50 +24,50 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile("com.android.support.test.espresso:espresso-core:2.2.2", {
         exclude group: "com.android.support", module: "support-annotations"
     })
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    compile "com.android.support:appcompat-v7:$support_version"
-    compile "com.android.support.constraint:constraint-layout:1.0.2"
-    compile "com.android.support:cardview-v7:$support_version"
-    compile "com.android.support:design:$support_version"
-    compile "com.android.support:support-vector-drawable:$support_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation "com.android.support:appcompat-v7:$support_version"
+    implementation "com.android.support.constraint:constraint-layout:1.0.2"
+    implementation "com.android.support:cardview-v7:$support_version"
+    implementation "com.android.support:design:$support_version"
+    implementation "com.android.support:support-vector-drawable:$support_version"
     testCompile "junit:junit:4.12"
 
     // Lifecycle, LiveData, and ViewModel
-    compile "android.arch.lifecycle:runtime:$architecture_components_version"
-    compile "android.arch.lifecycle:extensions:$architecture_components_version"
+    implementation "android.arch.lifecycle:runtime:$architecture_components_version"
+    implementation "android.arch.lifecycle:extensions:$architecture_components_version"
     kapt "android.arch.lifecycle:compiler:$architecture_components_version"
 
     // Dependency injection library: Dagger2
-    compile "com.google.dagger:dagger:$dagger_version"
+    implementation "com.google.dagger:dagger:$dagger_version"
     kapt "com.google.dagger:dagger-compiler:$dagger_version"
 
     // JSON deserialization library: Moshi
-    compile "com.squareup.moshi:moshi:1.5.0"
-    compile "com.squareup.retrofit2:converter-moshi:2.3.0"
+    implementation "com.squareup.moshi:moshi:1.5.0"
+    implementation "com.squareup.retrofit2:converter-moshi:2.3.0"
 
     // REST client: retrofit
-    compile "com.squareup.retrofit2:retrofit:$retrofit_version"
-    compile "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
-    compile "com.squareup.okhttp3:logging-interceptor:3.8.0"
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
+    implementation "com.squareup.okhttp3:logging-interceptor:3.8.0"
 
     // ReativeX stuff
-    compile "io.reactivex.rxjava2:rxjava:$rxjava_version"
-    compile "io.reactivex.rxjava2:rxandroid:2.0.1"
-    compile "io.reactivex.rxjava2:rxkotlin:2.0.0"
+    implementation "io.reactivex.rxjava2:rxjava:$rxjava_version"
+    implementation "io.reactivex.rxjava2:rxandroid:2.0.1"
+    implementation "io.reactivex.rxjava2:rxkotlin:2.0.0"
 
     // Image loading: Picasso
-    compile "com.github.bumptech.glide:glide:$glide_version"
+    implementation "com.github.bumptech.glide:glide:$glide_version"
     kapt "com.github.bumptech.glide:compiler:$glide_version"
-    compile ("com.github.bumptech.glide:recyclerview-integration:$glide_version") {
+    implementation ("com.github.bumptech.glide:recyclerview-integration:$glide_version") {
         // Excludes the support library because it's already included by Glide.
         transitive = false
     }
 
     // Video playing: Exoplayer
-    compile "com.google.android.exoplayer:exoplayer-core:r$exoplayer_version"
-    compile "com.google.android.exoplayer:exoplayer-ui:r$exoplayer_version"
+    implementation "com.google.android.exoplayer:exoplayer-core:r$exoplayer_version"
+    implementation "com.google.android.exoplayer:exoplayer-ui:r$exoplayer_version"
 }
