--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,17 @@
 buildscript {
-    ext.kotlin_version = '1.1.51'
-    ext.support_version = '26.1.0'
+    ext.kotlin_version = '1.2.0'
+    ext.support_version = '27.0.2'
     ext.dagger_version = '2.11'
     ext.retrofit_version = '2.3.0'
-    ext.rxjava_version = '2.1.5'
+    ext.rxjava_version = '2.1.7'
     ext.glide_version = '4.2.0'
     ext.exoplayer_version = '2.5.3'
-    ext.architecture_components_version = '1.0.0-beta2'
+    ext.architecture_components_version = '1.0.0'
     repositories {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
+        classpath 'com.android.tools.build:gradle:3.0.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
